# native_clicker

./: CMakeLists.txt  README.md
source/: includes.hpp  main.cpp
source/clicker/: c_clicker.cpp  c_clicker.hpp
source/util/: c_console.cpp  c_console.hpp  c_rand_util.hpp  c_win_api.cpp  c_win_api.hpp  values.cpp  values.hpp
